--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             <div class="logo">Pikxx</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
+                <li><a href="form-builder.html">Form Builder</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
